--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.1",
   "type": "module",
   "description": "Rehype plugin to set the target of <a/> to _blank.",
-  "keywords": ["rehype"],
+  "keywords": [
+    "rehype"
+  ],
   "main": "index.js",
   "scripts": {
     "build": "tsc",
@@ -21,15 +23,8 @@
   "homepage": "https://github.com/Tsuizen/rehype-target-blank#readme",
   "dependencies": {
     "@types/hast": "^2.3.4",
-    "@types/tape": "^4.13.2",
-    "hast": "^1.0.0",
     "hast-util-has-property": "^2.0.1",
-    "hastscript": "^7.2.0",
-    "jest": "^29.4.0",
-    "rehype": "^12.0.1",
-    "tape": "^5.6.3",
     "typescript": "^4.9.4",
-    "unist-builder": "^3.0.1",
     "unist-util-visit": "^4.1.2"
   }
 }
