--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/tape": "^4.13.2",
     "hastscript": "^7.2.0",
     "rehype": "^12.0.1",
+    "tape": "^5.6.3",
     "typescript": "^4.9.4",
     "unist-builder": "^3.0.1"
   }
